force-app/main/default/objects/Subscription__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>get total of all related child subscription line item</description>
    <label>Amount</label>
    <summarizedField>Subscription_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Subscription_Line_Item__c.Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>