force-app/main/default/objects/Subscription__c/fields/GST_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Tax_Amount__c</fullName>
    <description>to calculate gst tax amount by 7% of amount</description>
    <formula>Amount__c  *  ( VALUE($Label.educato__gst_rate)  / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>