force-app/main/default/objects/Subscription__c/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description>to store subscription end date</description>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>