force-app/main/default/objects/Subscription__c/listViews/All_Monthly_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Monthly_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Next_Bill_Date__c</columns>
    <columns>Payment_Frequency__c</columns>
    <columns>Amount__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Payment_Frequency__c</field>
        <operation>equals</operation>
        <value>Monthly</value>
    </filters>
    <label>All Monthly Subscriptions</label>
</ListView>